--- a/common/templates/base.html
+++ b/common/templates/base.html
@@ -11,7 +11,7 @@
     <meta name="keywords"
           content="apparel, catalog, clean, ecommerce, ecommerce HTML, electronics, fashion, html eCommerce, html store, minimal, multipurpose, multipurpose ecommerce, online store, responsive ecommerce template, shops"/>
     <meta name="description" content="Best ecommerce html template for single and multi vendor store.">
-    <meta name="author" content="ashishmaraviya">
+    <meta name="author" content="Alijon">
 
     <!-- site Favicon -->
     <link rel="icon" href="{% static 'assets/images/favicon/favicon.png' %}" sizes="32x32"/>
@@ -123,13 +123,13 @@
                         <!-- Header Cart Start -->
                         <a href="" class="ec-header-btn ec-header-wishlist">
                             <div class="header-icon"><i class="fi-rr-heart"></i></div>
-                            <span class="ec-header-count">4</span>
+<!--                            <span class="ec-header-count">3</span>-->
                         </a>
                         <!-- Header Cart End -->
                         <!-- Header Cart Start -->
                         <a href="#ec-side-cart" class="ec-header-btn ec-side-toggle">
                             <div class="header-icon"><i class="fi-rr-shopping-bag"></i></div>
-                            <span class="ec-header-count cart-count-lable">3</span>
+<!--                            <span class="ec-header-count cart-count-lable">3</span>-->
                         </a>
                         <!-- Header Cart End -->
                         <a href="" class="">
@@ -194,7 +194,7 @@
                             </a>
                             <!-- Header wishlist End -->
                             <!-- Header Cart Start -->
-                            <a href="#ec-side-cart" class="ec-header-btn ec-side-toggle">
+                            <a href="" class="ec-header-btn ec-side-toggle">
                                 <div class="header-icon"><i class="fi-rr-shopping-bag"></i></div>
                                 <span class="ec-header-count cart-count-lable">3</span>
                             </a>
@@ -237,82 +237,6 @@
     <!-- Header responsive Bottom  End -->
 </header>
 <!-- Header End  -->
-
-<!-- ekka Cart Start -->
-<div class="ec-side-cart-overlay"></div>
-<div id="ec-side-cart" class="ec-side-cart">
-    <div class="ec-cart-inner">
-        <div class="ec-cart-top">
-            <div class="ec-cart-title">
-                <span class="cart_title">My Cart</span>
-                <button class="ec-close">×</button>
-            </div>
-            <ul class="eccart-pro-items">
-                <li>
-                    <a href="product-left-sidebar.html" class="sidekka_pro_img"><img
-                            src="{% static 'assets/images/product-image/6_1.jpg' %}" alt="product"></a>
-                    <div class="ec-pro-content">
-                        <a href="product-left-sidebar.html" class="cart_pro_title">T-shirt For Women</a>
-                        <span class="cart-price"><span>$76.00</span> x 1</span>
-                        <div class="qty-plus-minus">
-                            <input class="qty-input" type="text" name="ec_qtybtn" value="1"/>
-                        </div>
-                        <a href="javascript:void(0)" class="remove">×</a>
-                    </div>
-                </li>
-                <li>
-                    <a href="product-left-sidebar.html" class="sidekka_pro_img"><img
-                            src="{% static 'assets/images/product-image/12_1.jpg' %}" alt="product"></a>
-                    <div class="ec-pro-content">
-                        <a href="product-left-sidebar.html" class="cart_pro_title">Women Leather Shoes</a>
-                        <span class="cart-price"><span>$64.00</span> x 1</span>
-                        <div class="qty-plus-minus">
-                            <input class="qty-input" type="text" name="ec_qtybtn" value="1"/>
-                        </div>
-                        <a href="javascript:void(0)" class="remove">×</a>
-                    </div>
-                </li>
-                <li>
-                    <a href="product-left-sidebar.html" class="sidekka_pro_img"><img
-                            src="{% static 'assets/images/product-image/3_1.jpg' %}" alt="product"></a>
-                    <div class="ec-pro-content">
-                        <a href="product-left-sidebar.html" class="cart_pro_title">Girls Nylon Purse</a>
-                        <span class="cart-price"><span>$59.00</span> x 1</span>
-                        <div class="qty-plus-minus">
-                            <input class="qty-input" type="text" name="ec_qtybtn" value="1"/>
-                        </div>
-                        <a href="javascript:void(0)" class="remove">×</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
-        <div class="ec-cart-bottom">
-            <div class="cart-sub-total">
-                <table class="table cart-table">
-                    <tbody>
-                    <tr>
-                        <td class="text-left">Sub-Total :</td>
-                        <td class="text-right">$300.00</td>
-                    </tr>
-                    <tr>
-                        <td class="text-left">VAT (20%) :</td>
-                        <td class="text-right">$60.00</td>
-                    </tr>
-                    <tr>
-                        <td class="text-left">Total :</td>
-                        <td class="text-right primary-color">$360.00</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="cart_btn">
-                <a href="cart.html" class="btn btn-primary">View Cart</a>
-                <a href="checkout.html" class="btn btn-secondary">Checkout</a>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- ekka Cart End -->
 
 <!-- Category Sidebar start -->
 <div class="ec-side-cat-overlay"></div>
@@ -385,9 +309,9 @@
                 <a href="{% url 'common:main_page' %}" class="ec-header-btn"><i class="fi-rr-home"></i></a>
             </div>
             <div class="ec-nav-panel-icons">
-                <a href="#ec-side-cart" class="toggle-cart ec-header-btn ec-side-toggle"><i
-                        class="fi-rr-shopping-bag"></i><span
-                        class="ec-cart-noti ec-header-count cart-count-lable">3</span></a>
+                <a href="" class="toggle-cart ec-header-btn ec-side-toggle"><i
+                        class="fi-rr-shopping-bag"></i>
+<!--                        <spanclass="ec-cart-noti ec-header-count cart-count-lable">3</span>--></a>
             </div>
         </div>
     </div>
