feat: update index.html category section

--- a/common/templates/index.html
+++ b/common/templates/index.html
@@ -242,34 +242,25 @@
             <!--Category Nav Start -->
             <div class="col-lg-3">
                 <ul class="ec-cat-tab-nav nav">
-                    <li class="cat-item"><a class="cat-link active" data-bs-toggle="tab" href="#tab-cat-1">
-                        <div class="cat-icons"><img class="cat-icon" src="{% static 'assets/images/icons/cat_1.png' %}"
+                    <li class="cat-item"><a class="cat-link active" data-bs-toggle="tab"
+                                            href="#{{ default_category.slug }}">
+                        <div class="cat-icons"><img class="cat-icon" src="{{ default_category.image.url }}"
                                                     alt="cat-icon"><img class="cat-icon-hover"
-                                                                        src="{% static 'assets/images/icons/cat_1_1.png' %}"
+                                                                        src="{{ default_category.image.url }}"
                                                                         alt="cat-icon"></div>
-                        <div class="cat-desc"><span>Clothes</span><span>440 Products</span></div>
+                        <div class="cat-desc"><span>{{ default_category.name }}</span><span>{{ default_category.product_set.all | length }} Products</span>
+                        </div>
                     </a></li>
-                    <li class="cat-item"><a class="cat-link" data-bs-toggle="tab" href="#tab-cat-2">
-                        <div class="cat-icons"><img class="cat-icon" src="{% static 'assets/images/icons/cat_2.png' %}"
+                    {% for i in category %}
+                    <li class="cat-item"><a class="cat-link" data-bs-toggle="tab" href="#{{ i.slug }}">
+                        <div class="cat-icons"><img class="cat-icon" src="{{ i.image.url }}"
                                                     alt="cat-icon"><img class="cat-icon-hover"
-                                                                        src="{% static 'assets/images/icons/cat_2_1.png' %}"
+                                                                        src="{{ i.image.url }}"
                                                                         alt="cat-icon"></div>
-                        <div class="cat-desc"><span>Watches</span><span>510 Products</span></div>
+                        <div class="cat-desc">
+                            <span>{{ i.name }}</span><span>{{ i.product_set.all | length }} Products</span></div>
                     </a></li>
-                    <li class="cat-item"><a class="cat-link" data-bs-toggle="tab" href="#tab-cat-3">
-                        <div class="cat-icons"><img class="cat-icon" src="{% static 'assets/images/icons/cat_3.png' %}"
-                                                    alt="cat-icon"><img class="cat-icon-hover"
-                                                                        src="{% static 'assets/images/icons/cat_3_1.png' %}"
-                                                                        alt="cat-icon"></div>
-                        <div class="cat-desc"><span>Bags</span><span>620 Products</span></div>
-                    </a></li>
-                    <li class="cat-item"><a class="cat-link" data-bs-toggle="tab" href="#tab-cat-4">
-                        <div class="cat-icons"><img class="cat-icon" src="{% static 'assets/images/icons/cat_4.png' %}"
-                                                    alt="cat-icon"><img class="cat-icon-hover"
-                                                                        src="{% static 'assets/images/icons/cat_4_1.png' %}"
-                                                                        alt="cat-icon"></div>
-                        <div class="cat-desc"><span>Shoes</span><span>320 Products</span></div>
-                    </a></li>
+                    {% endfor %}
                 </ul>
 
             </div>
@@ -278,44 +269,24 @@
             <div class="col-lg-9">
                 <div class="tab-content">
                     <!-- 1st Category tab end -->
-                    <div class="tab-pane fade show active" id="tab-cat-1">
+                    <div class="tab-pane fade show active" id="{{ default_category.slug }}">
                         <div class="row">
-                            <img src="{% static 'assets/images/cat-banner/1.jpg' %}" alt=""/>
+                            <img src="{{ default_category.image.url }}" alt=""/>
                         </div>
                         <span class="panel-overlay">
-                                <a href="shop-left-sidebar-col-3.html" class="btn btn-primary">View All</a>
+                                <a href="" class="btn btn-primary">View All</a>
                             </span>
                     </div>
-                    <!-- 1st Category tab end -->
-                    <div class="tab-pane fade" id="tab-cat-2">
+                    {% for i in category %}
+                    <div class="tab-pane fade" id="{{ i.slug }}">
                         <div class="row">
-                            <img src="{% static 'assets/images/cat-banner/2.jpg' %}" alt=""/>
+                            <img src="{{ i.image.url }}" alt=""/>
                         </div>
                         <span class="panel-overlay">
-                                <a href="shop-left-sidebar-col-3.html" class="btn btn-primary">View All</a>
+                                <a href="" class="btn btn-primary">View All</a>
                             </span>
                     </div>
-                    <!-- 2nd Category tab end -->
-                    <!-- 3rd Category tab start -->
-                    <div class="tab-pane fade" id="tab-cat-3">
-                        <div class="row">
-                            <img src="{% static 'assets/images/cat-banner/3.jpg' %}" alt=""/>
-                        </div>
-                        <span class="panel-overlay">
-                                <a href="shop-left-sidebar-col-3.html" class="btn btn-primary">View All</a>
-                            </span>
-                    </div>
-                    <!-- 3rd Category tab end -->
-                    <!-- 4th Category tab start -->
-                    <div class="tab-pane fade" id="tab-cat-4">
-                        <div class="row">
-                            <img src="{% static 'assets/images/cat-banner/4.jpg' %}" alt=""/>
-                        </div>
-                        <span class="panel-overlay">
-                                <a href="shop-left-sidebar-col-3.html" class="btn btn-primary">View All</a>
-                            </span>
-                    </div>
-                    <!-- 4th Category tab end -->
+                    {% endfor %}
                 </div>
                 <!-- Category Tab End -->
             </div>
