feat: big changes

--- a/common/templates/base.html
+++ b/common/templates/base.html
@@ -10,7 +10,7 @@
     <title>Zapchast Market</title>
     <meta name="keywords"
           content="apparel, catalog, clean, ecommerce, ecommerce HTML, electronics, fashion, html eCommerce, html store, minimal, multipurpose, multipurpose ecommerce, online store, responsive ecommerce template, shops"/>
-    <meta name="description" content="Best ecommerce html template for single and multi vendor store.">
+    <meta name="description" content="Zapchast-Market">
     <meta name="author" content="Alijon">
 
     <!-- site Favicon -->
@@ -66,8 +66,8 @@
                                     class="ecicon eci-twitter"></i></a></li>
                             <li class="list-inline-item"><a class="hdr-instagram" href="#"><i
                                     class="ecicon eci-instagram"></i></a></li>
-                            <li class="list-inline-item"><a class="hdr-linkedin" href="#"><i
-                                    class="ecicon eci-linkedin"></i></a></li>
+                            <li class="list-inline-item"><a class="hdr-linkedin" href="t.me/Alam_Shodiev"><i
+                                    class="ecicon eci-telegram"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -190,13 +190,13 @@
                             <!-- Header wishlist Start -->
                             <a href="" class="ec-header-btn ec-header-wishlist">
                                 <div class="header-icon"><i class="fi-rr-heart"></i></div>
-                                <span class="ec-header-count">4</span>
+<!--                                <span class="ec-header-count">4</span>-->
                             </a>
                             <!-- Header wishlist End -->
                             <!-- Header Cart Start -->
                             <a href="" class="ec-header-btn ec-side-toggle">
                                 <div class="header-icon"><i class="fi-rr-shopping-bag"></i></div>
-                                <span class="ec-header-count cart-count-lable">3</span>
+<!--                                <span class="ec-header-count cart-count-lable">3</span>-->
                             </a>
                             <!-- Header Cart End -->
                         </div>
