--- a/product/templates/product-list.html
+++ b/product/templates/product-list.html
@@ -70,66 +70,17 @@
                                                      src="{{ i.image.url }}" alt="Product"/>
                                             </a>
                                             <span class="percentage">New</span>
-                                            <!--                                            <a href="#" class="quickview" data-link-action="quickview"-->
-                                            <!--                                               title="Quick view" data-bs-toggle="modal"-->
-                                            <!--                                               data-bs-target="#ec_quickview_modal"><i class="fi-rr-eye"></i></a>-->
-                                            <!--                                            <div class="ec-pro-actions">-->
-                                            <!--                                                <a href="" class="ec-btn-group compare"-->
-                                            <!--                                                   title="Compare"><i class="fi fi-rr-arrows-repeat"></i></a>-->
-                                            <!--                                                <button title="Add To Cart" class="add-to-cart"><i-->
-                                            <!--                                                        class="fi-rr-shopping-basket"></i> Add To Cart-->
-                                            <!--                                                </button>-->
-                                            <!--                                                <a class="ec-btn-group wishlist" title="Wishlist"><i-->
-                                            <!--                                                        class="fi-rr-heart"></i></a>-->
-                                            <!--                                            </div>-->
                                         </div>
                                     </div>
                                     <div class="ec-pro-content">
                                         <h5 class="ec-pro-title"><a href="{% url 'product:product_detail' i.slug %}">{{ i.name }}</a></h5>
-                                        <!--                                        <div class="ec-pro-rating">-->
-                                        <!--                                            <i class="ecicon eci-star fill"></i>-->
-                                        <!--                                            <i class="ecicon eci-star fill"></i>-->
-                                        <!--                                            <i class="ecicon eci-star fill"></i>-->
-                                        <!--                                            <i class="ecicon eci-star fill"></i>-->
-                                        <!--                                            <i class="ecicon eci-star"></i>-->
-                                        <!--                                        </div>-->
                                         <div class="ec-pro-list-desc">{{ i.description|truncatechars:150 }}
                                         </div>
                                         <span class="ec-price">
 <!--                                                <span class="old-price">$27.00</span>-->
-                                                <span class="new-price">${{ i.price }}</span>
+                                                <span class="new-price">{{ i.price }} сум</span>
                                             </span>
-                                        <!--                                        <div class="ec-pro-option">-->
-                                        <!--                                            <div class="ec-pro-color">-->
-                                        <!--                                                <span class="ec-pro-opt-label">Color</span>-->
-                                        <!--                                                <ul class="ec-opt-swatch ec-change-img">-->
-                                        <!--                                                    <li class="active"><a href="#" class="ec-opt-clr-img"-->
-                                        <!--                                                                          data-src="{{ i.image.url }}"-->
-                                        <!--                                                                          data-src-hover="{{ i.image.url }}"-->
-                                        <!--                                                                          data-tooltip="Gray"><span-->
-                                        <!--                                                            style="background-color:#e8c2ff;"></span></a></li>-->
-                                        <!--                                                    <li><a href="#" class="ec-opt-clr-img"-->
-                                        <!--                                                           data-src="assets/images/product-image/6_2.jpg"-->
-                                        <!--                                                           data-src-hover="assets/images/product-image/6_2.jpg"-->
-                                        <!--                                                           data-tooltip="Orange"><span-->
-                                        <!--                                                            style="background-color:#9cfdd5;"></span></a></li>-->
-                                        <!--                                                </ul>-->
-                                        <!--                                            </div>-->
-                                        <!--                                            <div class="ec-pro-size">-->
-                                        <!--                                                <span class="ec-pro-opt-label">Size</span>-->
-                                        <!--                                                <ul class="ec-opt-size">-->
-                                        <!--                                                    <li class="active"><a href="#" class="ec-opt-sz"-->
-                                        <!--                                                                          data-old="$25.00" data-new="$20.00"-->
-                                        <!--                                                                          data-tooltip="Small">S</a></li>-->
-                                        <!--                                                    <li><a href="#" class="ec-opt-sz" data-old="$27.00"-->
-                                        <!--                                                           data-new="$22.00" data-tooltip="Medium">M</a></li>-->
-                                        <!--                                                    <li><a href="#" class="ec-opt-sz" data-old="$30.00"-->
-                                        <!--                                                           data-new="$25.00" data-tooltip="Large">X</a></li>-->
-                                        <!--                                                    <li><a href="#" class="ec-opt-sz" data-old="$35.00"-->
-                                        <!--                                                           data-new="$30.00" data-tooltip="Extra Large">XL</a></li>-->
-                                        <!--                                                </ul>-->
-                                        <!--                                            </div>-->
-                                        <!--                                        </div>-->
+
                                     </div>
                                 </div>
                             </div>
