--- a/product/templates/product-detail.html
+++ b/product/templates/product-detail.html
@@ -39,7 +39,7 @@
                                 <div class="single-product-scroll">
                                     <div class="single-product-cover">
                                         {% for i in product_obj.images.all %}
-                                        <div class="single-slide zoom-image-hover">
+                                        <div class="single-slide">
                                             <img class="img-responsive"
                                                  src="{{ i.image.url }}"
                                                  alt="">
