--- a/product/templates/product-list.html
+++ b/product/templates/product-list.html
@@ -59,7 +59,7 @@
                     <div class="shop-pro-inner">
                         <div class="row">
                             {% for i in product_obj %}
-                            <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 mb-6 pro-gl-content">
+                            <div class="col-lg-4 col-md-6 col-sm-6 col-6 mb-6 pro-gl-content">
                                 <div class="ec-product-inner">
                                     <div class="ec-pro-image-outer">
                                         <div class="ec-pro-image">
