--- a/common/templates/base.html
+++ b/common/templates/base.html
@@ -330,7 +330,8 @@
 </div>
 <!-- Cart Floating Button end -->
 
-
+{% block script %}
+{% endblock %}
 <!-- Vendor JS -->
 <script src="{% static 'assets/js/vendor/jquery-3.5.1.min.js' %}"></script>
 <script src="{% static 'assets/js/vendor/popper.min.js' %}"></script>
